--- a/css/login_style.css
+++ b/css/login_style.css
@@ -8,6 +8,13 @@ body {
   margin-bottom: 80px;
 }
 
+.center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+
+}
+
 .form-signin {
   max-width: 380px;
   padding: 15px 35px 45px;
